# factored

./: .gitignore  Makefile  Makefile.in  README  common_rules.mk  configure.ac  factor  parallelize  parallelize.rb  split.sh  standard_defs.mk.in
corpus/: Makefile  Makefile.in
corpus/da-en/: Makefile  minimal.da  minimal.da.cluster  minimal.da.deprel  minimal.da.lemma  minimal.da.pos  minimal.da.wsd.output  minimal.en  minimal.en.cluster  minimal.en.deprel  minimal.en.factored  minimal.en.lemma  minimal.en.pos  minimal.en.wpl  minimal.en.wsd
data/training/: toy.de  toy.en
data/training-monolingual/: toy.raw.de  toy.raw.en
doc/: MOSES_OPTIONS.txt
doc/wmt11/: scores.numbers
doc/wmt11/scores/: oracle-scores.csv  scores.csv  sents-with-UNK.csv  sents-without-UNK.csv
lib/make/: common.mk
lib/make/corpus/: Makefile
lib/make/model/: Makefile
lib/make/models/: Makefile
models/: Makefile  Makefile.in
nbproject/: project.properties  project.xml
